--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
+    "css-loader": "^5.0.1",
+    "style-loader": "^1.1.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
