--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {},
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.1.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
