--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.1.3",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   }
 }
